Additional Refactor For Token Exchange Handler (#2668)
* Added TokenExchangeServiceIntegrationTest.java; Added TokenExchangeServiceTest.java; Refactored Request context handling;

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* Update token-exchange/src/main/java/com/networknt/token/exchange/extract/AuthType.java

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

* Update token-exchange/src/main/java/com/networknt/token/exchange/RequestContext.java

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

* [WIP] Add changes based on Token Exchange Handler review comments (#2669)

* Initial plan

* Add thread safety to TokenExchangeService.refreshToken using ReentrantLock

Co-authored-by: stevehu <2042337+stevehu@users.noreply.github.com>

* Use lockInterruptibly() to properly support thread interruption

Co-authored-by: stevehu <2042337+stevehu@users.noreply.github.com>

---------

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: stevehu <2042337+stevehu@users.noreply.github.com>

* Initial plan (#2670)

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>

---------

Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>
Co-authored-by: Steve Hu <stevehu@gmail.com>
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>
Co-authored-by: Copilot <198982749+Copilot@users.noreply.github.com>
Co-authored-by: stevehu <2042337+stevehu@users.noreply.github.com>